--- a/index.html
+++ b/index.html
@@ -5,11 +5,35 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <!-- Bootstrap CSS file -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-
-    <title></title>
+    <link rel="stylesheet" href="assets\css\style.css">
+    <title>Ester Cardella</title>
   </head>
-  <body>
 
+
+  <body>
+    <div class="container-fluid background-home">
+      <nav class="navbar">
+        <div class="container-fluid d-flex">
+          <a href="#" class="navbar-brand text-decoration-none align-self-center">
+            Ester Cardella
+          </a>
+          <button type="button" class="custom-toggler navbar-toggler align-self-center" data-toggle="collapse" data-target="#navbarPage">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+        </div>
+      </nav>
+      <div class="container padding">
+        <div class="row">
+          <div class="col-md-6">
+            <p class="lead text-light darkbg">Nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
+                                          Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
+                                          Ha richieste da committenti da tutto il mondo come: las Vegas, Chicago, Spagna, Messico, Francia, Svizzera e molti altri luoghi.
+                                          Ha lavorato anche per Stoker&McAuley production e con la casa editrice Edizioni Inkiostro. Al momento è al lavoro su numerosi progetti e commissioni.</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
     <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
