Rendere responsive la home

--- a/index.html
+++ b/index.html
@@ -11,28 +11,28 @@
 
 
   <body>
-    <div class="container-fluid background-home">
-      <nav class="navbar">
-        <div class="container-fluid d-flex">
-          <a href="#" class="navbar-brand text-decoration-none align-self-center">
-            Ester Cardella
-          </a>
-          <button type="button" class="custom-toggler navbar-toggler align-self-center" data-toggle="collapse" data-target="#navbarPage">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-        </div>
-      </nav>
-      <div class="container padding">
-        <div class="row">
-          <div class="col-md-6">
-            <p class="lead text-light darkbg">Nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
-                                          Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
-                                          Ha richieste da committenti da tutto il mondo come: las Vegas, Chicago, Spagna, Messico, Francia, Svizzera e molti altri luoghi.
-                                          Ha lavorato anche per Stoker&McAuley production e con la casa editrice Edizioni Inkiostro. Al momento è al lavoro su numerosi progetti e commissioni.</p>
+        <nav class="navbar">
+          <div class="container-fluid ml-md-5">
+            <a href="#" class="navbar-brand text-decoration-none ">
+              Ester Cardella
+            </a>
+            <div class="col-3 col-sm-6 col-md-5 col-lg-4 col-xl-3 ml-auto">
+              <a href="" class="go-store btn text-uppercase" target="_blank">Vai allo store </a>
+              <button class="custom-toggler navbar-toggler" type="button">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+            </div>
+          </div>
+        </nav>
+
+      <div class="container-fluid padding">
+          <div class="col-md-5 ml-md-4 darkbg">
+            <p class="lead text-light ">Nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
+                                          Comincia a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
+                                          Ha richieste da committenti da tutto il mondo. Ha lavorato anche per Stoker&McAuley production e con la casa editrice Edizioni Inkiostro. Al momento è al lavoro su numerosi progetti e commissioni.</p>
+                                          <a href="bio.html" class="go-store btn text-uppercase" target="_blank">Leggi ancora </a>
           </div>
         </div>
-      </div>
-
     </div>
     <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
