--- a/index.html
+++ b/index.html
@@ -51,16 +51,25 @@
         </div>
       </header>
 
-      <section class="hero-wrap js-fullheight">
+      <section class="bg-home">
 	      <div class="container px-0">
 	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
 	          <div class="col-md-12 ftco-animate text-center">
 	          	<div class="desc">
-
 	            </div>
 	          </div>
 	        </div>
 	      </div>
+	    </section>
+
+      <section class="js-fullheight article">
+        <div class="container">
+          <h1 class="h1 text-light">Ester Cardella</h1>
+          <hr style="float:left">
+          <p class="lead">
+
+          </p>
+        </div>
 	    </section>
 
     </div>
