ritorno alla bio su prima sezione

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
               <h1 class="mb-4"><a href="index.html" class="logo">Ester Cardella</a></h1>
-
+<hr class="w-75" style="margin: 0 auto">
               <ul>
                 <li class="active"><a href="index.html"><span>Home</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
@@ -39,36 +39,47 @@
       </div>
     </nav>
 
-    <div id="colorlib-page">
-      <header>
+    <div id="colorlib-page" class="">
+      <header class="d-flex">
       	<div class="container">
 	        <div class="colorlib-navbar-brand">
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
-          <a href="" class="go-store ml-5 btn text-uppercase" target="_blank">Vai allo store </a>
+          <div class="d-flex align-items-center">
+            <a href="" class="go-store btn text-uppercase" target="_blank">Vai allo store </a>
+            <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 
-	        <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
+          </div>
         </div>
       </header>
 
-      <section class="bg-home">
-	      <div class="container px-0">
-	        <div class="row no-gutters slider-text js-fullheight align-items-center justify-content-center" data-scrollax-parent="true">
-	          <div class="col-md-12 ftco-animate text-center">
-	          	<div class="desc">
-	            </div>
+      <section class="bg-home js-fullheight">
+	      <div class="container mt-5">
+	        <div class="row no-gutters align-items-center">
+	          <div class="col-md-7 p-5">
+                <h1 class="h1 title mt-md-5">About me</h1>
+                <hr style="width:60%;">
+                <p class=" text-light article">
+                  Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
+      Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
+</p>
+      <a href="#"><button type="button" class="btn btn-lg">Continua a leggere</button>
+      </a>
 	          </div>
 	        </div>
 	      </div>
 	    </section>
 
-      <section class="js-fullheight article">
+      <section class="js-fullheight article-secondary">
         <div class="container">
-          <h1 class="h1 text-light">Ester Cardella</h1>
-          <hr style="float:left">
+          <h1 class="h1 text-light">THE BEST WORKS</h1>
+          <hr style="width:60%;">
           <p class="lead">
-
-          </p>
+            Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
+Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
+         </p>
+         <a href="#"><button type="button" class="btn btn-lg">Continua a leggere</button>
+         </a>
         </div>
 	    </section>
 
