--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       </header>
 
       <section class="bg-home js-fullheight">
-	      <div class="container mt-5">
+	      <div class="container first-content mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title mt-md-5">About me</h1>
@@ -63,32 +63,83 @@
                   Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
       Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
 </p>
-      <a href="#"><button type="button" class="btn btn-lg">Continua a leggere</button>
+      <a href="#"><button type="button" class="btn btn-lg">Read More</button>
       </a>
 	          </div>
 	        </div>
 	      </div>
 	    </section>
-
-      <section class="js-fullheight article-secondary">
-        <div class="container">
-          <h1 class="h1 text-light">THE BEST WORKS</h1>
-          <hr style="width:60%;">
-          <p class="lead">
-            Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
-Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
-         </p>
-         <a href="#"><button type="button" class="btn btn-lg">Continua a leggere</button>
-         </a>
-        </div>
+      <section class="js-fullheight">
+	      <div class="container mt-5">
+	        <div class="row no-gutters align-items-center">
+	          <div class="col-md-7 p-5">
+                <h1 class="h1 title mt-md-5">The Best Works</h1>
+                <hr style="width:60%;">
+                <p class=" text-light article">
+Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      <a href="#"><button type="button" class="btn btn-lg">Gallery</button>
+      </a>
+	          </div>
+	        </div>
+	      </div>
 	    </section>
-
     </div>
   </div>
+
+
+  <footer id="footer" class="pb-50 pb-md-100">
+    <div class="footer-bg">
+
+    </div>
+  	<div class="container footer-content">
+  		<div class="text-center">
+        <p class="footer-logo">Ester Cardella</p>
+  		</div>
+  		<ul id="nav-footer" class="nav justify-content-center text-uppercase font-weight-bold text-center text-sm-left d-block d-sm-flex">
+  			<li class="nav-item ">
+  				<a class="nav-link" href="bio.html">&nbsp;&nbsp;&nbsp;Bio&nbsp;&nbsp;&nbsp;</a>
+  			</li>
+  			<li class="nav-item ">
+  				<a class="nav-link" href="gallery.html">&nbsp;&nbsp;&nbsp;Gallery&nbsp;&nbsp;&nbsp;</a>
+  			</li>
+  			<li class="nav-item ">
+  				<a class="nav-link" href="contacts.html">&nbsp;&nbsp;&nbsp;Contatti&nbsp;&nbsp;&nbsp;</a>
+  			</li>
+  			<li class="nav-item">
+  				<a class="nav-link" href="shop.html">&nbsp;&nbsp;&nbsp;Shop&nbsp;&nbsp;&nbsp;</a>
+  			</li>
+  		</ul>
+  		<hr class="mx-auto border-light my-30 my-md-40">
+  		<ul id="nav-footer-social" class="nav justify-content-center text-uppercase font-weight-bold">
+  			<!-- <li class="nav-item">
+  				<a class="nav-link" href="//simonebianchi.deviantart.com/" target="_blank"><i class="socicon-deviantart"></i></a>
+  			</li> -->
+  			<li class="nav-item">
+  				<a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+  			</li>
+  			<li class="nav-item">
+  								<a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+  			</li>
+        <li class="nav-item">
+  								<a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
+  			</li>
+        <li class="nav-item">
+  								<a class="nav-link" title="ArtStation"href="https://l.facebook.com/l.php?u=https%3A%2F%2Festercardella.artstation.com%2F%3Ffbclid%3DIwAR0y7fkmBvAtrg80_KY09QBFXrzt3-v2LFBv7c4y0xs1ql3cIc2798WCLyw&h=AT00sNvpwaGH9Myd7ewVQ083R0pAVv-S2pBYcP8oOjzdGU3sXgDnSaYrmhEL1cifRPBHuA4TLXYq1WHqVUoni4ppRnDtL9gySNf3MdRGnHrBreiJzc5LSk_iVN-9H5zFE-SnHQ" target="_blank"><i class="fab fa-artstation"></i></a>
+  			</li>
+
+  		</ul>
+  		<section id="privacy" class="mt-50 mt-md-100 text-light text-center w-75 w-lg-50 mx-auto">
+  			<p>
+  				© Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
+  			</p>
+  		</section>
+  	</div>
+  </footer>
 
 	<script src="assets/js/jquery.min.js"></script>
   <script src="assets/js/popper.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script src="https://kit.fontawesome.com/78ffc68b9f.js" crossorigin="anonymous"></script>
   <script src="assets/js/main.js"></script>
 
 	</body>
