--- a/index.html
+++ b/index.html
@@ -35,6 +35,23 @@
               </ul>
             </div>
           </div>
+          <div class="col-md-12 ">
+            <ul class="nav d-flex menu-icons justify-content-center text-uppercase font-weight-bold">
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" title="ArtStation"href="https://l.facebook.com/l.php?u=https%3A%2F%2Festercardella.artstation.com%2F%3Ffbclid%3DIwAR0y7fkmBvAtrg80_KY09QBFXrzt3-v2LFBv7c4y0xs1ql3cIc2798WCLyw&h=AT00sNvpwaGH9Myd7ewVQ083R0pAVv-S2pBYcP8oOjzdGU3sXgDnSaYrmhEL1cifRPBHuA4TLXYq1WHqVUoni4ppRnDtL9gySNf3MdRGnHrBreiJzc5LSk_iVN-9H5zFE-SnHQ" target="_blank"><i class="fab fa-artstation"></i></a>
+            </li>
+
+          </ul>
+        </div>
         </div>
       </div>
     </nav>
@@ -111,9 +128,6 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
   		</ul>
   		<hr class="mx-auto border-light my-30 my-md-40">
   		<ul id="nav-footer-social" class="nav justify-content-center text-uppercase font-weight-bold">
-  			<!-- <li class="nav-item">
-  				<a class="nav-link" href="//simonebianchi.deviantart.com/" target="_blank"><i class="socicon-deviantart"></i></a>
-  			</li> -->
   			<li class="nav-item">
   				<a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
   			</li>
