--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
           <div class="d-flex align-items-center">
-            <a href="" class="go-store btn text-uppercase" target="_blank">Vai allo store </a>
+            <a href="" class="go-store textGradient btn text-uppercase" target="_blank">Vai allo store </a>
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 
           </div>
@@ -74,7 +74,7 @@
 	      <div class="container first-content mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
-                <h1 class="h1 title mt-md-5">About me</h1>
+                <h1 class="h1 title textGradient mt-md-5">About me</h1>
                 <hr style="width:60%;">
                 <p class=" text-light article">
                   Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
@@ -90,7 +90,7 @@
 	      <div class="container mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
-                <h1 class="h1 title mt-md-5">The Best Works</h1>
+                <h1 class="h1 title textGradient mt-md-5">The Best Works</h1>
                 <hr style="width:60%;">
                 <p class=" text-light article">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
