--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@
               <a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+              <a class="nav-link" href="mailto:estercardella@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+            </li>
+
+            <li class="nav-item">
+              <a class="nav-link" href="https://www.facebook.com/EsterDarklyReset" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
+              <a class="nav-link" href="https://www.deviantart.com/estercardella?fbclid=IwAR16D7P5j-uWA24KvQ8jSdPrHontvrmHsr106L7T7_5vWJgUK9zw13p5BdI" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" title="ArtStation"href="https://l.facebook.com/l.php?u=https%3A%2F%2Festercardella.artstation.com%2F%3Ffbclid%3DIwAR0y7fkmBvAtrg80_KY09QBFXrzt3-v2LFBv7c4y0xs1ql3cIc2798WCLyw&h=AT00sNvpwaGH9Myd7ewVQ083R0pAVv-S2pBYcP8oOjzdGU3sXgDnSaYrmhEL1cifRPBHuA4TLXYq1WHqVUoni4ppRnDtL9gySNf3MdRGnHrBreiJzc5LSk_iVN-9H5zFE-SnHQ" target="_blank"><i class="fab fa-artstation"></i></a>
@@ -132,10 +136,13 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
   				<a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
   			</li>
   			<li class="nav-item">
-  								<a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
+  				<a class="nav-link" href="mailto:estercardella@gmail.com" target="_blank" title="Email"><i class="fas fa-envelope"></i></a>
+  			</li>
+  			<li class="nav-item">
+  								<a class="nav-link" href="https://www.facebook.com/EsterDarklyReset" target="_blank" title="Facebook"><i class="fab fa-facebook"></i></a>
   			</li>
         <li class="nav-item">
-  								<a class="nav-link" href="https://www.facebook.com/ester.cardella" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
+          <a class="nav-link" href="https://www.deviantart.com/estercardella?fbclid=IwAR16D7P5j-uWA24KvQ8jSdPrHontvrmHsr106L7T7_5vWJgUK9zw13p5BdI" target="_blank" title="Deviantart"><i class="fab fa-deviantart"></i></a>
   			</li>
         <li class="nav-item">
   								<a class="nav-link" title="ArtStation"href="https://l.facebook.com/l.php?u=https%3A%2F%2Festercardella.artstation.com%2F%3Ffbclid%3DIwAR0y7fkmBvAtrg80_KY09QBFXrzt3-v2LFBv7c4y0xs1ql3cIc2798WCLyw&h=AT00sNvpwaGH9Myd7ewVQ083R0pAVv-S2pBYcP8oOjzdGU3sXgDnSaYrmhEL1cifRPBHuA4TLXYq1WHqVUoni4ppRnDtL9gySNf3MdRGnHrBreiJzc5LSk_iVN-9H5zFE-SnHQ" target="_blank"><i class="fab fa-artstation"></i></a>
