--- a/index.html
+++ b/index.html
@@ -23,14 +23,13 @@
         <div class="colorlib-table-cell js-fullheight">
           <div class="row no-gutters">
             <div class="col-md-12 text-center">
-              <h1 class="mb-4"><a href="index.html" class="logo">Ester Cardella</a></h1>
-<hr class="w-75" style="margin: 0 auto">
+              <h1 class="mb-4"><a href="index.html" class="logo textGradient">Ester Cardella</a></h1>
               <ul>
-                <li class="active"><a href="index.html"><span>Home</span></a></li>
+                <li ><a href="index.html"><span>Home</span></a></li>
                 <li><a href="about.html"><span>About</span></a></li>
                 <li><a href="blog.html"><span>Gallery</span></a></li>
                 <li><a href="contact.html"><span>Contact</span></a></li>
-                <li><a href="contact.html"><span>Store</span></a></li>
+                <li class="active "><a href="contact.html"><span>Store</span></a></li>
 
               </ul>
             </div>
@@ -67,7 +66,7 @@
 	          <a class="colorlib-logo" href="index.html">Ester Cardella</a>
 	        </div>
           <div class="d-flex align-items-center">
-            <a href="" class="go-store textGradient btn text-uppercase" target="_blank">Vai allo store </a>
+            <a href="" class="go-store textGradient btn text-uppercase" target="_blank">Store </a>
             <a href="#" class="js-colorlib-nav-toggle colorlib-nav-toggle"><i></i></a>
 
           </div>
