--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div>
       </header>
 
-      <section class="bg-home js-fullheight">
+      <section class="bg-home">
 	      <div class="container first-content mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
@@ -89,7 +89,7 @@
 	        </div>
 	      </div>
 	    </section>
-      <section class="js-fullheight">
+      <section class="">
 	      <div class="container mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
