--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title textGradient mt-md-5">About me</h1>
                 <hr style="width:60%;">
-                <p class=" text-light article">
+                <p class="article">
                   Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
       Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
 </p>
@@ -95,11 +95,12 @@
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title textGradient mt-md-5">The Best Works</h1>
                 <hr style="width:60%;">
-                <p class=" text-light article">
+                <p class="article">
 Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
       <a href="#"><button type="button" class="btn btn-lg">Gallery</button>
       </a>
 	          </div>
+
 	        </div>
 	      </div>
 	    </section>
@@ -129,7 +130,7 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor 
   				<a class="nav-link" href="shop.html">&nbsp;&nbsp;&nbsp;Shop&nbsp;&nbsp;&nbsp;</a>
   			</li>
   		</ul>
-  		<hr class="mx-auto border-light my-30 my-md-40">
+  		<hr class="mx-auto my-30 my-md-40">
   		<ul id="nav-footer-social" class="nav justify-content-center text-uppercase font-weight-bold">
   			<li class="nav-item">
   				<a class="nav-link" href="https://www.instagram.com/ester_cardella_/" target="_blank" title="Instagram"><i class="fab fa-instagram"></i></a>
