--- a/index.html
+++ b/index.html
@@ -89,23 +89,28 @@
 	        </div>
 	      </div>
 	    </section>
-      <section class="">
-	      <div class="container mt-5">
-	        <div class="row no-gutters align-items-center">
-	          <div class="col-md-7 p-5">
-                <h1 class="h1 title textGradient mt-md-5">The Best Works</h1>
-                <hr style="width:60%;">
-                <p class="article">
-Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      <a href="#"><button type="button" class="btn btn-lg">Gallery</button>
-      </a>
-	          </div>
-
-	        </div>
-	      </div>
-	    </section>
     </div>
   </div>
+  <section class="">
+    <div class="container mt-5">
+      <div class="row no-gutters align-items-center">
+        <div class="col-7 p-5">
+          <h1 class="h1 title textGradient mt-md-5">The Best Works</h1>
+          <hr style="width:60%;">
+          <p class="article">
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <a href="#"><button type="button" class="btn btn-lg">Gallery</button>
+            </a>
+          </div>
+          <div class="col-4 pr-0 text-right">
+            <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
+          </div>
+
+
+        </div>
+      </div>
+    </section>
+
 
 
   <footer id="footer" class="pb-50 pb-md-100">
