--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
         								Compila il form per inviare il tuo messaggio.							</p>
 
 
-				<form name="form" onsubmit="return controlloForm()" action="https://formspree.io/diija.develop@gmail.com" method= "post">
+				<form name="form" onsubmit="return controlloForm()" action="https://formspree.io/f/mnqlggkl" method= "post">
           <input type="hidden" name="success" value="success.html">
 
 
