--- a/contact.html
+++ b/contact.html
@@ -87,22 +87,27 @@
         								Compila il form per inviare il tuo messaggio.							</p>
 
 
-				<form name="form" onsubmit="return controlloForm()" action="https://formspree.io/f/mnqlggkl" method= "post">
-          <input type="hidden" name="success" value="success.html">
+          <form name="formmail" method="post" action="assets/php/formmail.php" onsubmit="return controlloForm()">
+                                  <input type="hidden" name="successo" value="http://www.miosito.com/pagina-successo.html">
+          <div class="form-group">
+            <input class="form-control"type="text" id="nome" name="nome" placeholder="Nome e Cognome*">
 
+          </div>
+          <div class="form-group">
+            <input class="form-control"type="text" id="email" name="email" placeholder="Indirizzo di posta elettronica*">
+          </div>
+          <div class="form-group">
+            <input class="form-control"type="text" id="tel" name="tel" placeholder="Numero di telefono">
 
-        <label for="contact_name" class="control-label required  sr-only"></label>
-        <input type="text" class="form-control " id="contact_name" name="contact_name" placeholder="Nome*">
-        <label for="contact_surname" class="control-label required  sr-only"></label>
-        <input type="text" class="mt-3 form-control " id="contact_surname" name="contact_surname" placeholder="Cognome*">
-        <label for="contact_email" class="control-label required  sr-only"></label>
-        <input type="text" class="mt-3 form-control " id="contact_email" name="contact_email" placeholder="Email*">
-        <label for="contact_request" class=" control-label required  sr-only"></label>
-        <textarea class="form-control mt-4" id="contact_request" name="contact_request" placeholder="Richiesta Informazioni*" rows="4"></textarea>
-        <input type="submit" value="Invia Richiesta" class="btn btn-dark text-uppercase submit mt-30 mt-lg-60 mx-auto mx-md-0 d-block w-100 w-md-auto">
+          </div>
+          <div class="form-group">
+            <textarea class="form-control" id="msg" name="msg" placeholder="Scrivi il tuo messaggio*"></textarea>
 
-			</form>
+          </div>
 
+                        <input class="form-control textGradient btn text-uppercase" type="submit" value="Invia Richiesta">
+
+                      </form>
 
 								</div>
   					</div>
