--- a/contact.html
+++ b/contact.html
@@ -25,8 +25,8 @@
                 <h1 class="mb-4"><a href="index.html" class="logo textGradient">Ester Cardella</a></h1>
                 <ul>
                   <li ><a href="index.html"><span>Home</span></a></li>
-                  <li><a href="about.html"><span>About</span></a></li>
-                  <li><a href="blog.html"><span>Gallery</span></a></li>
+                  <li><a href="bio.html"><span>About</span></a></li>
+                  <li><a href="gallery.html"><span>Gallery</span></a></li>
                   <li><a href="contact.html"><span>Contact</span></a></li>
                   <li class="active "><a href="contact.html"><span>Store</span></a></li>
 
