--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                   Ester Cardella nata a Palermo classe '92 ha studiato al liceo artistico e alla scuola del fumetto della sua città.
       Subito dopo gli studi comincia a lavorare con diversi committenti privati, comincia così a fare esperienza nel mondo delle illustrazioni a tema erotico e dark, dando una personalità alle donne che disegna, rendendole forti e indipendenti, oltre che ammiccanti e sensuali, coscienti della propria bellezza.
 </p>
-      <a href="#"><button type="button" class="btn btn-lg">Read More</button>
+      <a href="bio.html"><button type="button" class="btn btn-lg">Read More</button>
       </a>
 	          </div>
 	        </div>
@@ -103,8 +103,8 @@
             </a>
           </div>
           <div class="col-sm-5 pr-0 text-right">
-            <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
-          </div>
+         <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
+
 
 
         </div>
