--- a/gallery.html
+++ b/gallery.html
@@ -3,12 +3,24 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,700' rel='stylesheet' type='text/css'>
-
   	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="assets\photoswipe\photoswipe.css">
+    <link rel="stylesheet" href="assets\photoswipe\default-skin.css">
+
 
   	<link rel="stylesheet" href="assets/css/style.css">
   	<link rel="stylesheet" href="assets/css/style2.css">
+
+
+    <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/78ffc68b9f.js" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
+    <script src="path/to/photoswipe.min.js"></script>
+    <script src="path/to/photoswipe-ui-default.min.js"></script>
 
 
     <title>Gallery</title>
@@ -78,12 +90,12 @@
 
 
 
-
-
     <section id="gallery-page" class=" fb_viewcontent py-5" data-name="Gallery" data-type="content" data-id="1" data-token="+BAbISQfVzTknKf1kbZpksTQJzC1cgzRK6bmqXCz">
-    			<div class="container mt-5 pt-5">
-
     				<div id="totopgallery"></div>
+
+            <div class="container pt-md-5 mt-5">
+              <p class="lead mt-md-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </div>
     			<!--	<div id="filters" class="d-flex justify-content-center ">
     					<button class="btn btn-outline-dark btn-gallery mr-15 text-uppercase is-checked" data-filter="*"> Mostra tutte </button>
 
@@ -94,84 +106,101 @@
     											<button class="btn btn-outline-dark btn-gallery mr-15 text-uppercase" data-filter=".sketches">Sketches</button>
     									</div> -->
 
-    				<!-- Go to www.addthis.com/dashboard to customize your tools -->
-    				<div class="addthis_inline_share_toolbox"></div>
 
-    				<div id="gallery_box" class="row mt-5 position-relative lightbox-group grid">
-    												<a href=" " class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-    								<img src="assets\img\cemetery_300.jpg" data-src="" class="img-fluid shadow lazyload" alt="" />
+    				<div id="gallery_box" class=" row mt-5 position-relative lightbox-group grid">
+    												<a href=" " class="col-md-3 col-sm-4 mb-3
+">
+    								<img src="https://cdna.artstation.com/p/assets/images/images/031/602/224/large/ester-cardella-vampira-ink-100.jpg?1604077686" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-    								<img src="assets\img\cowgirl_300.jpg" data-src="" class="img-fluid shadow lazyload" alt="" />
+    												<a href=""  class=" col-md-3 col-sm-4 mb-3
+">
+    								<img src="https://cdnb.artstation.com/p/assets/images/images/030/122/719/large/ester-cardella-cowgirl-ink100.jpg?1599670544" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-    								<img src="assets\img\Donna_con_gufi_ink.jpg" data-src="" class="img-fluid shadow lazyload" alt="" />
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
+    								<img src="https://cdna.artstation.com/p/assets/images/images/026/443/090/large/ester-cardella-donna-con-gufi-ink-100.jpg?1588790686" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-    								<img src="assets\img\Donna_con_Lince_ink.jpg" data-src="" class="img-fluid shadow lazyload" alt="" />
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
+    								<img src="https://cdnb.artstation.com/p/assets/images/images/025/937/619/large/ester-cardella-donna-con-lince-ink-130.jpg?1587398349" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-    								<img src="assets\img\Donna_con_serpenti.jpg" data-src="" class="img-fluid shadow lazyload" alt="" />
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
+    								<img src="https://cdnb.artstation.com/p/assets/images/images/025/645/853/large/ester-cardella-donna-con-serpenti-150.jpg?1586459136" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/036/615/172/large/ester-cardella-mummyes-ink-150.jpg?1618158412" data-src="" class="img-fluid shadow lazyload" alt="" />
     							</a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
                     <img src="https://cdnb.artstation.com/p/assets/images/images/033/820/995/large/ester-cardella-demon-vampire-ink-1001.jpg?1610647211" data-src="" class="img-fluid shadow lazyload" alt="
 " />
                   </a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/033/499/758/large/ester-cardella-piratesse-ubriche100.jpg?1609788353" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/033/979/086/large/ester-cardella-lilith-odino-2.jpg?1611077513" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdnb.artstation.com/p/assets/images/images/032/779/279/large/ester-cardella-lilith-odino-1-ig100.jpg?1607446906" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/032/719/010/large/ester-cardella-dark-lady-100.jpg?1607278439" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/032/225/560/large/ester-cardella-sirena-ink100.jpg?1605811972" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-    												<a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+    												<a href="" class="col-md-3 col-sm-4 mb-3
+">
     								<img src="https://cdna.artstation.com/p/assets/images/images/031/759/420/large/ester-cardella-sara-connor-ink-100.jpg?1604513963" data-src="" class="img-fluid shadow lazyload" alt="
 " />
     							</a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdnb.artstation.com/p/assets/images/images/031/161/045/large/ester-cardella-prova-ind300.jpg?1602776050" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdnb.artstation.com/p/assets/images/images/031/072/997/large/ester-cardella-vampira-1.jpg?1602524461" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdnb.artstation.com/p/assets/images/images/030/620/405/large/ester-cardella-ghost-dark-horse-ink-1.jpg?1601149710" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdna.artstation.com/p/assets/images/images/029/023/190/large/ester-cardella-lady-octopus-ink-100.jpg?1596214227" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdna.artstation.com/p/assets/images/images/028/704/644/large/ester-cardella-goblin-ink-100.jpg?1595266421" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdna.artstation.com/p/assets/images/images/027/967/070/large/ester-cardella-dr-doom-ink-igartstation150.jpg?1593096359" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
-          <img src="https://cdnb.artstation.com/p/assets/images/images/027/135/665/large/ester-cardella-skull.jpg?1590686463" data-src="" class="img-fluid shadow lazyload" alt="" />
-        </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="https://cdnb.artstation.com/p/assets/images/images/027/099/465/large/ester-cardella-red-sonja-ink100.jpg?1590591815" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
-                  <a href="" class="col-md-3 col-sm-4 mb-3 element-item marvel-masterpieces">
+                  <a href="" class="col-md-3 col-sm-4 mb-3
+">
           <img src="" data-src="" class="img-fluid shadow lazyload" alt="" />
         </a>
 
@@ -249,15 +278,6 @@
 
 
 
-    <!-- JS files: jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/78ffc68b9f.js" crossorigin="anonymous"></script>
-    <script src="assets/js/main.js"></script>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4/jquery.min.js"></script>
-<script type="text/javascript" src="/fancybox/jquery.fancybox-1.3.4.pack.js"></script>
-<script type="text/javascript" src="/fancybox/jquery.mousewheel-3.0.4.pack.js"></script>
 
 
   </body>
