--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </header>
 
       <section class="bg-home">
-	      <div class="container first-content mt-5">
+	      <div class="container first-content  js-md-fullheight mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title textGradient mt-md-5">About me</h1>
@@ -103,9 +103,9 @@
             </a>
           </div>
           <div class="col-sm-5 pr-0 text-right">
-         <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
+      <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
 
-
+-->
 
         </div>
       </div>
