--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </header>
 
       <section class="bg-home">
-	      <div class="container first-content  js-md-fullheight mt-5">
+	      <div class="container first-content mt-5">
 	        <div class="row no-gutters align-items-center">
 	          <div class="col-md-7 p-5">
                 <h1 class="h1 title textGradient mt-md-5">About me</h1>
@@ -91,9 +91,26 @@
 	    </section>
     </div>
   </div>
-  <section class="">
-    <div class="container mt-5">
+  <section class="gallery ">
+    <div class="container mt-5 ">
       <div class="row no-gutters align-items-center">
+        <div class="col-sm-5 pr-0 order-1 pb-5 mb-5">
+          <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
+        -->
+            <div id="carousel" class="carousel vert slide" data-ride="carousel" data-interval="3100">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="d-block mx-auto img-fluid" src="assets\img\cowgirl_300_detail.jpg" alt="First slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block mx-auto img-fluid" src="assets/img/cemetery_300_details.jpg" alt="Second slide">
+                    </div>
+                    <div class="carousel-item">
+                        <img class="d-block mx-auto img-fluid" src="assets\img\Donna_con_Lince_ink_details.jpg" alt="Third slide">
+                    </div>
+                </div>
+            </div>
+      </div>
         <div class="col-sm-7 p-5">
           <h1 class="h1 title textGradient mt-md-5 w-100">The Best Works</h1>
           <hr style="width:60%;">
@@ -102,12 +119,6 @@
             <a href="gallery.html"><button type="button" class="btn btn-lg">Gallery</button>
             </a>
           </div>
-          <div class="col-sm-5 pr-0 text-right">
-      <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
-
--->
-
-        </div>
       </div>
     </section>
 
