--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <section class="gallery ">
     <div class="container mt-5 ">
       <div class="row no-gutters align-items-center">
-        <div class="col-sm-5 pr-0 order-1 pb-5 mb-5">
+        <div class="col-md-5 pr-0 order-1 pb-5 mb-5">
           <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
         -->
             <div id="carousel" class="carousel vert slide" data-ride="carousel" data-interval="3100">
