--- a/index.html
+++ b/index.html
@@ -97,7 +97,9 @@
         <div class="col-md-5 pr-0 order-1 pb-5 mb-5">
           <!--   <img src="assets/img/triangle.png" alt="Donna con lince" class="triangle img-fluid">
         -->
+
             <div id="carousel" class="carousel vert slide" data-ride="carousel" data-interval="3100">
+
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <img class="d-block mx-auto img-fluid" src="assets\img\cowgirl_300_detail.jpg" alt="First slide">
@@ -111,7 +113,7 @@
                 </div>
             </div>
       </div>
-        <div class="col-sm-7 p-5">
+        <div class="col-md-7 p-5">
           <h1 class="h1 title textGradient mt-md-5 w-100">The Best Works</h1>
           <hr style="width:60%;">
           <p class="article">
