--- a/gallery.html
+++ b/gallery.html
@@ -81,7 +81,7 @@
 
 
 
-    <section  class=" fb_viewcontent py-5" data-name="Gallery" data-type="content" data-id="1" data-token="">
+    <section  class="py-5">
             <div class="container pt-md-5 mt-5">
               <p class="lead mt-md-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
             </div>
@@ -95,19 +95,58 @@
     											<button class="btn btn-outline-dark btn-gallery mr-15 text-uppercase" data-filter=".sketches">Sketches</button>
     									</div> -->
 
-                      <div id="lightgallery" class=" d-grid row mt-5 position-relative lightbox-group grid p-5 m-5">
+                      <div id="lightgallery" class="row mt-5 p-5 m-5">
 
                         <a href="assets\img\cowgirl_300-low.jpg"  data-lg-size="562-800"  class=" col-md-2 col-sm-4 mb-3">
-                          <img src="assets\img\cowgirl_300-low.jpg" data-src="" class="img-fluid shadow lazyload" alt="Cowgirl" />
+                          <img src="assets\img\cowgirl_300-low.jpg" data-src="" class=" img-fluid shadow lazyload" alt="Cowgirl" />
                         </a>
                         <a href="assets\img\Donna_con_gufi_ink-low.jpg"  data-lg-size="562-800"  class=" col-md-2 col-sm-4 mb-3">
-                          <img src="assets\img\Donna_con_gufi_ink-low.jpg" data-src="" class="img-fluid shadow lazyload" alt="Donna con Gufi" />
+                          <img src="assets\img\Donna_con_gufi_ink-low.jpg" data-src="" class=" img-fluid shadow lazyload " alt="Donna con Gufi" />
                         </a>
-                        <a href="assets\img\Donna_con_serpenti-low.jpg"  data-lg-size="562-800" class="col-md-2 col-sm-4 mb-3">
-                          <img src="assets\img\Donna_con_serpenti-low.jpg" data-src="" class="img-fluid shadow lazyload" alt="Donna con Serpenti" />
+                        <a href="assets\img\Donna_con_serpenti-low.jpg"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="assets\img\Donna_con_serpenti-low.jpg" data-src="" class=" img-fluid shadow lazyload " alt="Donna con Serpenti" />
                         </a>
-                        <a href="assets\img\cemetery_300-low.jpg"  data-lg-size="562-800" class="col-md-2 col-sm-4 mb-3">
-                          <img src="assets\img\cemetery_300-low.jpg" data-src="" class="img-fluid shadow lazyload" alt="Donna con Serpenti" />
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/032/779/279/large/ester-cardella-lilith-odino-1-ig100.jpg?1607446906"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdnb.artstation.com/p/assets/images/images/032/779/279/large/ester-cardella-lilith-odino-1-ig100.jpg?1607446906" data-src="" class=" img-fluid shadow lazyload " alt="Lilith e Odino" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/033/499/758/large/ester-cardella-piratesse-ubriche100.jpg?1609788353"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/033/499/758/large/ester-cardella-piratesse-ubriche100.jpg?1609788353" data-src="" class=" img-fluid shadow lazyload " alt="Piratesse" />
+                        </a>
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/031/072/997/large/ester-cardella-vampira-1.jpg?1602524461"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdnb.artstation.com/p/assets/images/images/031/072/997/large/ester-cardella-vampira-1.jpg?1602524461" data-src="" class="img-fluid shadow lazyload " alt="Ghost" />
+                        </a>
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/033/820/995/large/ester-cardella-demon-vampire-ink-1001.jpg?1610647211"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdnb.artstation.com/p/assets/images/images/033/820/995/large/ester-cardella-demon-vampire-ink-1001.jpg?1610647211" data-src="" class=" img-fluid shadow lazyload " alt="Vampirella with Demon" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/033/979/086/large/ester-cardella-lilith-odino-2.jpg?1611077513"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/033/979/086/large/ester-cardella-lilith-odino-2.jpg?1611077513" data-src="" class=" img-fluid shadow lazyload " alt="Lilith and Odin" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/036/615/172/large/ester-cardella-mummyes-ink-150.jpg?1618158412"  data-lg-size="562-800" class="col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/036/615/172/large/ester-cardella-mummyes-ink-150.jpg?1618158412" data-src="" class=" img-fluid shadow lazyload " alt="Mummy" />
+                        </a>
+
+
+
+                        <a href="https://cdna.artstation.com/p/assets/images/images/032/719/010/large/ester-cardella-dark-lady-100.jpg?1607278439"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/032/719/010/large/ester-cardella-dark-lady-100.jpg?1607278439" data-src="" class="img-fluid shadow lazyload " alt="Vampire" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/032/225/560/large/ester-cardella-sirena-ink100.jpg?1605811972"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/032/225/560/large/ester-cardella-sirena-ink100.jpg?1605811972" data-src="" class="img-fluid shadow lazyload " alt="Mermaid" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/031/759/420/large/ester-cardella-sara-connor-ink-100.jpg?1604513963"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/031/759/420/large/ester-cardella-sara-connor-ink-100.jpg?1604513963" data-src="" class="img-fluid shadow lazyload " alt="You're Terminated, Fucker!" />
+                        </a>
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/031/161/045/large/ester-cardella-prova-ind300.jpg?1602776050"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdnb.artstation.com/p/assets/images/images/031/161/045/large/ester-cardella-prova-ind300.jpg?1602776050" data-src="" class="img-fluid shadow lazyload " alt="Indian Dancers" />
+                        </a>
+                        <a href="https://cdna.artstation.com/p/assets/images/images/028/704/644/large/ester-cardella-goblin-ink-100.jpg?1595266421"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdna.artstation.com/p/assets/images/images/028/704/644/large/ester-cardella-goblin-ink-100.jpg?1595266421" data-src="" class="img-fluid shadow lazyload " alt="Goblin" />
+                        </a>
+                        <a href="https://cdnb.artstation.com/p/assets/images/images/031/072/997/large/ester-cardella-vampira-1.jpg?1602524461"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="https://cdnb.artstation.com/p/assets/images/images/031/072/997/large/ester-cardella-vampira-1.jpg?1602524461" data-src="" class="img-fluid shadow lazyload " alt="Vampire" />
+                        </a>
+                        <a href="assets\img\cemetery_300-low.jpg"  data-lg-size="562-800" class=" col-md-2 col-sm-4 mb-3">
+                          <img src="assets\img\cemetery_300-low.jpg" data-src="" class="img-fluid shadow lazyload " alt="Cemetary" />
                         </a>
 
                       </div>
@@ -183,6 +222,8 @@
         <script src="https://kit.fontawesome.com/78ffc68b9f.js" crossorigin="anonymous"></script>
 
         <script src="assets/js/main.js"></script>
+        <script src="assets\js\lazysizes.min.js"></script>
+        <script src="assets\js\isotope-docs.min.js"></script>
 
         <script src="assets\js\lightgallery.min.js"></script>
         <script src="assets\js\lg-fullscreen.min.js"></script>
@@ -196,34 +237,24 @@
         });
         </script>
 
-        <script type="text/javascript">
-              (function (gallery_id) {
-                var title = $('h2'),
-                    viewer = $('#viewer'),
-                    thumbs = $('#thumbs');
+        <script>
+            var $grid = $('.grid').isotope({
+              // main isotope options
+              itemSelector: '.',
+              // set layoutMode
+              layoutMode: 'masonryHorizontal',
+              // options for cellsByRow layout mode
+              cellsByRow: {
+                columnWidth: 200,
+                rowHeight: 150
+              },
+              // options for masonry layout mode
+              masonry: {
+                columnWidth: '.grid-sizer'
+              }
+            })
+        </script>
 
-                // album info
-                $.getJSON('//graph.facebook.com/' + gallery_id + '?callback=?', function(json, status, xhr) {
-                  title.html('<a href="' + json.link + '">' + json.name + '</a> from ' + json.from.name);
-                });
-
-                // images
-                $.getJSON('//graph.facebook.com/' + gallery_id + '/photos?callback=?', function(json, status, xhr) {
-                  var imgs = json.data;
-
-                  viewer.attr('src', imgs[0].images[0].source)
-
-                  for (var i = 0, l = imgs.length - 1; i < l; i++) {
-                    $('<img src="' + imgs[i].images[3].source + '" data-fullsize="' + imgs[i].images[0].source + '">').appendTo(thumbs);
-                  }
-
-                  $('img', thumbs).bind('click', function(e) {
-                    e.preventDefault();
-                    viewer.attr('src', $(this).attr('data-fullsize'));
-                  });
-                });
-              })('105451787607783'); // let's go -- put the gallery ID here
-            </script>
 
   </body>
 </html>
