--- a/index.html
+++ b/index.html
@@ -104,13 +104,13 @@
 
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img class="d-block mx-auto img-fluid" src="assets\img\cowgirl_300_detail.jpg" alt="First slide">
+                        <img class="d-block mx-auto img-fluid" src="assets/img/details/cowgirl_300_detail.jpg" alt="First slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block mx-auto img-fluid" src="assets/img/cemetery_300_details.jpg" alt="Second slide">
+                        <img class="d-block mx-auto img-fluid" src="assets/img/details/cemetery_300_details.jpg" alt="Second slide">
                     </div>
                     <div class="carousel-item">
-                        <img class="d-block mx-auto img-fluid" src="assets\img\Donna_con_Lince_ink_details.jpg" alt="Third slide">
+                        <img class="d-block mx-auto img-fluid" src="assets/img/details/Donna_con_Lince_ink_details.jpg" alt="Third slide">
                     </div>
                 </div>
             </div>
